--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=1c78f3e5e06eb3c88a52819fbccdba6e
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/cheese_wiz"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/testReact"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
