--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/serializer": "4.2.*|4.3.*",
         "symfony/twig-bundle": "4.2.*|4.3.*",
         "symfony/validator": "4.2.*|4.3.*",
+        "symfony/webpack-encore-bundle": "1.8",
         "symfony/yaml": "4.2.*"
     },
     "config": {
